--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -21,8 +21,10 @@ script: |
   sudo apt-get remove optipng 
   sudo apt-get update
 
-  # compass
+  # gems
   sudo gem install compass
+  sudo gem install bundler
+  bundle install
 
   # node.js
   sudo npm cache clean -f
